--- a/client/css/base.css
+++ b/client/css/base.css
@@ -223,9 +223,9 @@ h6 { font-size:18px; line-height:23px}
 .text-light-purple-blue { color: #374a8a;}
 .text-dark-purple-blue { color: #2a3869;}
 .text-puerto-rico {color:#55beae; }
-.text-orange-peel { color: #FF9800;}
+.text-orange-peel { color: #F76B1C;}
 .text-greenish-blue { color: #3ed6a2;}
-.text-light-blue { color: #53d0e7;}
+.text-light-blue { color: #61E1FB;}
 .text-dark-speech-blue { color: #1b1841;}
 .text-yellow-ochre {color: #c0812a}
 .text-yellowish-gray {color: #817b71}
