--- a/client/css/jplayer.flat.css
+++ b/client/css/jplayer.flat.css
@@ -8,7 +8,7 @@
 .jp-controls a{
 	cursor: pointer;
 	display: inline-block;
-	padding: 10px 5px;
+	padding: 10px 0px;
 }
 
 .jp-controls a i{
@@ -18,11 +18,11 @@
 	display: table-cell;
 	vertical-align: middle;
 	text-align: center;
-	width: 50px;
+	/*width: 50px;*/
 	height: 90px;
 }
 div.jp-progress{
-	width: auto;
+	width: 60%;
 	padding: 0 15px;
 	vertical-align: top;
 	position: relative;
@@ -67,55 +67,6 @@ a.hid{
 	display: none;
 }
 
-/*video*/
-.jp-video{
-	font-size: 0;
-	line-height: 0;
-	min-height: 160px;
-}
-.jp-video-play{
-	display: inline-block;
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	cursor: pointer;
-	margin-left: -30px;
-	margin-top: -65px;
-}
-.jp-video-full {
-	/* Rules for IE6 (full-screen) */
-	width:480px;
-	height:270px;
-	/* Rules for IE7 (full-screen) - Otherwise the relative container causes other page items that are not position:static (default) to appear over the video/gui. */
-	position:static !important; position:relative;
-}
-
-/* The z-index rule is defined in this manner to enable Popcorn plugins that add overlays to video area. EG. Subtitles. */
-.jp-video-full div div {
-	z-index:1000;
-}
-
-.jp-video-full .jp-jplayer {
-	top: 0;
-	left: 0;
-	position: fixed !important; position: relative; /* Rules for IE6 (full-screen) */
-	overflow: hidden;
-}
-
-.jp-video-full .jp-gui {
-	position: fixed !important; position: static; /* Rules for IE6 (full-screen) */
-	top: 0;
-	left: 0;
-	width:100%;
-	height:100%;
-	z-index:1001; /* 1 layer above the others. */
-}
-
-.jp-video-full .jp-interface {
-	position: absolute !important; position: relative; /* Rules for IE6 (full-screen) */
-	bottom: 0;
-	left: 0;
-}
 
 
 /*playlist*/
