--- a/client/css/base.css
+++ b/client/css/base.css
@@ -359,7 +359,7 @@ h6 { font-size:18px; line-height:23px}
 .bg-bitter-sweet{background: #f3605c;}
 .bg-scarlet-gum{background: #432a4b;}
 .bg-orange{background: #ef5037;}
-.bg-light-orange{background: #ff573d;}
+.bg-light-orange{background: #F76B1C;}
 .bg-chrome-yellow { background: #f5ab35;}
 .bg-gray-yellow { background: #f6f5f5;}
 .bg-very-light-gray { background: #f8f8f8;}
