--- a/client/css/style.css
+++ b/client/css/style.css
@@ -698,3 +698,9 @@ footer .social-icon a:last-child{ margin-right:0;}
     color: #555;
     /*font-size: 50px;*/
 }
+
+.one-line {
+    word-wrap: normal;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
