feature(course_section): show pdf files works

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -708,3 +708,10 @@ footer .social-icon a:last-child{ margin-right:0;}
     display: table-cell;
     vertical-align: middle;
 }
+.notesWrapper {
+    display: block;
+    width: 100%;
+}
+.notesWrapper canvas {
+    width: 100%;
+}
