--- a/client/css/base.css
+++ b/client/css/base.css
@@ -37,7 +37,10 @@ Table of contents
     Reset
 ====================================== */
 
-body{ font-family: 'Open Sans', sans-serif; -webkit-font-smoothing: antialiased; font-smoothing: antialiased; font-size:13px; color:#707070; line-height:22px; letter-spacing: 0.01em }
+html {
+    overflow-x: hidden;
+}
+body{ font-family: 'Open Sans', sans-serif; -webkit-font-smoothing: antialiased; font-smoothing: antialiased; font-size:13px; color:#707070; line-height:22px; letter-spacing: 0.01em; overflow-x: hidden; }
 a { text-decoration: none; color:#4e4e4e; cursor: pointer !important; outline: 0; }
 a:hover, a:focus{ text-decoration: none;}
 a:focus {outline: none; }
