--- a/client/css/base.css
+++ b/client/css/base.css
@@ -1116,7 +1116,9 @@ section {border-bottom:0  }
 .one-sixth-screen {height: 985px;}
 
 /* round image  */
-.img-round{ width: 250px; border-radius: 50%; overflow: hidden;}
+.img-round{ width: 250px; height: 250px; border-radius: 50%; overflow: hidden;       background-repeat: no-repeat;
+      background-position: center center;
+      background-size: cover;}
 .img-round-250{ border-radius: 50%; height: 250px; width: 250px; overflow: hidden;}
 .img-round-70{ border-radius: 50%; height: 70px; width: 70px; overflow: hidden;}
 .img-round-80{ border-radius: 50%; height: 80px; width: 80px; overflow: hidden;}
