--- a/client/css/responsive.css
+++ b/client/css/responsive.css
@@ -2309,7 +2309,7 @@
     .call-to-action7 .slider-typography{ padding:30px 0 0;}
 
     /* Round Image */
-    .img-round { width: 170px;}
+    .img-round { width: 170px; height: 170px;}
     .xs-display-table-cell-vertical-middle{float:left !important;}
     .xs-padding-15-lr{padding:0 15px !important;}
     .header-style3 .logo{margin-bottom:0;}
