--- a/client/css/base.css
+++ b/client/css/base.css
@@ -89,7 +89,7 @@ dl {list-style-position: outside;}
 .main-font {font-family: 'Open Sans', sans-serif !important;}
 
 /* heading */
-h1, h2, h3, h4, h5, h6 { margin:0; padding:0; color: #000;}
+/*h1, h2, h3, h4, h5, h6 { margin:0; padding:0; color: #000;}*/
 h1 { font-size:50px; line-height: 60px;}
 h2 { font-size:35px; line-height:40px}
 h3 { font-size:30px; line-height:35px}
