fixed blog styling

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -492,15 +492,30 @@ header .row { align-items: center; display: flex; height: auto;}
 
 .blog-style1  ul, ol {
     margin-bottom: 1.25em !important;
+    font-family: Georgia, Cambria, "Times New Roman", Times, serif;
+    font-size: 18px;
+    color: #202123;
+    line-height: 1.58;
+    margin-bottom: 1.25em;
+    font-weight: 400;
+    letter-spacing: -.003em;
 }
 .blog-style1    li {
-      margin-bottom: 0.25em !important;
+    margin-bottom: 0.25em !important;
+    font-family: Georgia, Cambria, "Times New Roman", Times, serif;
+    font-size: 18px;
+    color: #202123;
+    line-height: 1.58;
+    margin-bottom: 1.25em;
+    font-weight: 400;
+    letter-spacing: -.003em;
 }
 
 
 .blog-style1  p {
     font-family: Georgia, Cambria, "Times New Roman", Times, serif;
-    font-size: 1.65em;
+    font-size: 18px;
+    color: #202123;
     line-height: 1.58;
     margin-bottom: 1.25em;
     font-weight: 400;
