fixed blog styling

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -490,7 +490,7 @@ header .row { align-items: center; display: flex; height: auto;}
     margin-top: 1.5em ;
 }
 
-.blog-style1 > ul, ol {
+.blog-style1  ul, ol {
     margin-bottom: 1.25em ;
     font-family: Georgia, Cambria, "Times New Roman", Times, serif;
     font-size: 18px;
@@ -500,7 +500,7 @@ header .row { align-items: center; display: flex; height: auto;}
     font-weight: 400;
     letter-spacing: -.003em;
 }
-.blog-style1  >  li {
+.blog-style1   li {
     margin-bottom: 0.25em ;
     font-family: Georgia, Cambria, "Times New Roman", Times, serif;
     font-size: 18px;
@@ -512,7 +512,7 @@ header .row { align-items: center; display: flex; height: auto;}
 }
 
 
-.blog-style1 > p {
+.blog-style1  p {
     font-family: Georgia, Cambria, "Times New Roman", Times, serif;
     font-size: 18px;
     color: #202123;
