--- a/client/css/style.css
+++ b/client/css/style.css
@@ -827,8 +827,9 @@ footer .social-icon a:last-child{ margin-right:0;}
 .video-js-audio-custom {
   background-color: #acb3bc !important;
 }
-button.vjs-device-button.vjs-control.vjs-icon-audio-perm {
-    display: none;
+button.vjs-device-button.vjs-control.vjs-icon-audio-perm,
+.vjs-record-indicator.vjs-control  {
+    display: none; /* hide big record button and rec label while recording */
 }
 
 /*center a div*/
