revised landing page

--- a/client/css/base.css
+++ b/client/css/base.css
@@ -192,7 +192,7 @@ h6 { font-size:18px; line-height:23px}
 /* text color */
 .text-white{ color:#ffffff !important;}
 .text-black{ color:#000000 !important;}
-.text-dark-gray { color:#282828!important;}
+.text-dark-gray { color:#1e1e1e!important;}
 .text-light-gray{ color: #bfbfbf;}
 .text-light-gray2 { color: #707070;}
 .text-medium-gray{ color: #848484;}
