--- a/client/css/style.css
+++ b/client/css/style.css
@@ -1015,16 +1015,14 @@ button.vjs-device-button.vjs-control.vjs-icon-audio-perm,
   /*border: 1px solid lightGrey;*/
   background: #f6f6f6;
   border-top: 0;
-
-  p {
+}
+.Collapsible__contentInner > p {
     margin-bottom: 10px;
     font-size: 14px;
     line-height: 20px;
-
-    &:last-child {
+}
+.Collapsible__contentInner > p:last-child {
       margin-bottom: 0;
-    }
-  }
 }
 
 /*//The link which when clicked opens the collapsable area*/
