--- a/client/css/style.css
+++ b/client/css/style.css
@@ -1042,8 +1042,10 @@ button.vjs-device-button.vjs-control.vjs-icon-audio-perm,
 }
 .Collapsible__trigger::after {
     font-family: "Material Icons";
+    /*font-family: 'FontAwesome';*/
     /*content: '\f107';*/
-    content: \E313;
+    /*content: \E313;*/
+    content: 'keyboard_arrow_down';
     position: absolute;
     right: 10px;
     top: 10px;
